# src/server.ts
@@ -1,8 +1,10 @@
 import express from 'express';
-import { GetTrack } from './useCase/getTracks';
+
 import cors from 'cors';
-const deezer = require('./routes/deezer/index.ts');
 const search = require('./routes/search/index.ts');
+const deezer = require('./routes/deezer/index.ts');
+
+const authPost = require('./routes/auth/index.ts');
 
 import { JsonObject } from 'swagger-ui-express';
 import bodyParser from 'body-parser';
@@ -12,7 +14,7 @@ import { serve, setup } from 'swagger-ui-express';
 const deezerDoc = require('./swagger/swagger_output.json');
 
 const app = express();
-
+require('dotenv').config();
 const jsonObject: JsonObject = deezerDoc as unknown as JsonObject;
 app.use('/api-docs', serve, setup(jsonObject, { explorer: true }));
 
@@ -22,6 +24,7 @@ app.use(cors());
 
 app.use('/deezer', deezer);
 app.use('/search', search);
+app.use('/auth', authPost);
 
 function startServer() {
   const server = app.listen(3001, () => {});
